--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,16 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Auth": {
-    "Domain": "dev-4nmkq13nhzjzkjvm.eu.auth0.com",
+  "Auth0": {
     "ClientId": "HtGeOJ5kQswk8nO01J4dNKaeQwimjkwn",
+    "Domain": "dev-4nmkq13nhzjzkjvm.eu.auth0.com",
+    "Audience": "https://thamco-productsapi-drf5guh7dfa8ceb7.uksouth-01.azurewebsites.net/products"
+  },
+  "Auth": {
     "ClientSecret": "GRTwJFNyRhKBUHnzqelrXeyRxeRcxcaSz0d_apNzpku_FDR1CKr8PSkuqBqPNJPM",
-    "Audience": "https://thamco-productsapi-drf5guh7dfa8ceb7.uksouth-01.azurewebsites.net/products",
-    "Authority": "https://dev-4nmkq13nhzjzkjvm.eu.auth0.com/"
-
+    "Authority": "https://dev-4nmkq13nhzjzkjvm.eu.auth0.com/oauth/token"
   },
   "ProductsApi": {
-    "BaseUrl": "https://thamco-productsapi-drf5guh7dfa8ceb7.uksouth-01.azurewebsites.net/"
+    "BaseUrl": "https://localhost:7249/"
 },
   "AllowedHosts": "*"
 }
