Change baseURL to live API

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -15,7 +15,7 @@
     "Authority": "https://dev-4nmkq13nhzjzkjvm.eu.auth0.com/oauth/token"
   },
   "ProductsApi": {
-    "BaseUrl": "https://localhost:7249/"
+    "BaseUrl": "https://thamco-productsapi-drf5guh7dfa8ceb7.uksouth-01.azurewebsites.net/"
 },
   "AllowedHosts": "*"
 }
