Remove appsettings.Development.json from repository

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ProductsApi": {
-    "BaseUrl": "https://thamco-productsapi-drf5guh7dfa8ceb7.uksouth-01.azurewebsites.net/"
+    "BaseUrl": "thamco-productsapi-drf5guh7dfa8ceb7.uksouth-01.azurewebsites.net/"
 },
   "AllowedHosts": "*"
 }
