--- a/WebApp.Test/WebApp.Test.csproj
+++ b/WebApp.Test/WebApp.Test.csproj
@@ -16,7 +16,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
-    <ProjectReference Include="C:\Users\david\Documents\ThAmCo-WebApp\ThAmCo-Store-WebApp\WebApp\WebApp.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <ProjectReference Include="..\WebApp\WebApp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
